--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -37,6 +37,7 @@
   & .nav__label {
     padding-left: 24px;
     font-family: $f_primary;
+    font-size: 16px;
     font-weight: 500;
     line-height: 50px;
     color: $c_white;
